[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Fonts/Roboto-Thin.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GameOverScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 1 )

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -172.0
margin_right = 256.0
margin_bottom = 172.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 337.0

[node name="GameOver_txt" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 498.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 75.0
margin_right = 498.0
margin_bottom = 89.0

[node name="Winner_txt" type="Label" parent="PanelContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 498.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.635294, 1, 1 )
text = "Player -1 won!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 145.0
margin_right = 498.0
margin_bottom = 159.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 163.0
margin_right = 498.0
margin_bottom = 205.0
alignment = 1

[node name="Restart_btn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 260.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 264.0
margin_right = 278.0
margin_bottom = 42.0

[node name="Quit_btn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 346.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
